# work_v2

./: README.md  ie_work.py  pyproject.toml  str_lib.py
src/ie_bike_model/: __init__.py  model.py
src/ie_work2/: __init__.py  constants.py
